<resources>
    <string name="app_name">GoCodes GPS Tracker</string>

    <string name="current_location">Current Location</string>
    <string name="update_location">Update Location Now</string>
    <string name="settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="asset_id">Asset Id \'ABSD-DEC2\'</string>
    <string name="update_frequency">Update Frequency in Hours</string>
    <string name="save">Save</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="update_on_move">Update on Move</string>
    <string name="update_history">Update History</string>
    <string name="real_time">Real-Time Update</string>
    <string name="incorrect_email">Incorrect email</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="empty_assert_id">AssertId cannot be empty</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="unsuccessful">Unsuccessful</string>
    <string name="history">History</string>

    <string-array name="map_types">
        <item>Map</item>
        <item>Hybrid</item>
        <item>Satellite</item>
    </string-array>
</resources>
