<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gocodes.locationtracker.ui.activities.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ToolBarStyle"
        android:background="@color/colorPrimary">
    
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right">
            <ImageView
                android:id="@+id/ivLogs"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:padding="7dp"
                android:layout_marginRight="7dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>    

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/etAssetId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/asset_id"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_frequency"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="5dp">
                <TextView
                    android:id="@+id/tvFrequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:textSize="18sp"/>

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="6"
                    android:progress="1"/>
            </LinearLayout>

            <CheckBox
                android:id="@+id/cbUpdateOnMove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_on_move"
                android:checked="true"
                android:layout_marginTop="10dp"/>

            <CheckBox
                android:id="@+id/cbUpdateHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_history"
                android:layout_marginTop="10dp"/>

            <CheckBox
                android:id="@+id/cbRealTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/real_time"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:textColor="@android:color/white"
                android:onClick="onClickUpdate"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
