<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bgLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"/>

    <LinearLayout
        android:id="@+id/llBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        app:behavior_peekHeight="60dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/light_gray">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true">
                <ImageView
                    android:id="@+id/ivLocation"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_location"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true">
            <ImageView
                android:id="@+id/ivRefresh"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_location"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="onClickSettings">
            <ImageView
                android:id="@+id/ivSettings"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        android:onClick="onClickChangeState"
        app:backgroundTint="#FF4081"
        app:layout_anchor="@id/llBottomSheet"
        app:layout_anchorGravity="top|right|end"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/map_type_background"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal">
        <Spinner
            android:id="@+id/spMapType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:entries="@array/map_types"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>